Add jwt filter to include authentication on apis